# topobank-statistics

./: .travis.yml  AUTHORS  CHANGELOG.md  MANIFEST.in  README  README.rst  conftest.py  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg  statistics_test_settings.py  test_urls.py
.github/workflows/: publish.yml  test.yml
config/settings/: base.py
frontend/: RoughnessParametersCard.vue  roughness_parameters_card.js
tests/: conftest.py  test_api.py  test_context.py  test_functions.py  test_reentrant.py  test_results_view.py
topobank_statistics/: __init__.py  apps.py  downloads.py  functions.py  tests.py  urls.py  utils.py  version.py  views.py  workflows.py
topobank_statistics/frontend/: RoughnessParametersCard.vue  roughness_parameters_card.js
topobank_statistics/frontend/analysis/: RoughnessParametersCard.vue  roughness_parameters_card.js
topobank_statistics/templates/topobank_statistics/: example.html  roughnessparameters_card_detail.html  roughnessparameters_card_list.html
topobank_statistics/testing/: __init__.py  urls.py
topobank_statistics/tests/: conftest.py  test_api.py  test_functions.py  test_reentrant.py  test_results_view.py  urls.py
topobank_statistics/workflows/: __init__.py  _utils.py  autocorrelation.py  curvature_distribution.py  height_distribution.py  power_spectral_density.py  roughness_parameters.py  scale_dependent_curvature.py  scale_dependent_slope.py  slope_distribution.py  variable_bandwidth.py
